Siguiendo con las secciones de vet y humano productos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -104,7 +104,7 @@
                     <p><img src="../img/llamada-telefonica.png" alt="">
                     +57 601-7559348</p>
                     <p><img src="../img/ubicacion.png" alt="">
-                        Cra. 15 No. 93A-62 OF: 304-305 - Bogota - Colombia</p>
+                        Cra. 15 No. 93A-62 OF: 304-305 | Bogota - Colombia</p>
                     <p><img src="../img/email.png" alt="">
                         info@anabas.co.jp</p>
                 </div>
