--- a/pages/simulacion.html
+++ b/pages/simulacion.html
@@ -110,10 +110,11 @@
                 <img src="../img/linkedin.png" alt="">
             </div>
             <div class="col-lg iconos_uno"> 
+                <p>Datos de contacto:</p>
                 <p><img src="../img/llamada-telefonica.png" alt="">
                 +57 601-7559348</p>
                 <p><img src="../img/ubicacion.png" alt="">
-                    Cra. 15 No. 93A-62 OF: 304-305</p>
+                    Cra. 15 No. 93A-62 OF: 304-305| Bogotá - Colombia</p>
                 <p><img src="../img/email.png" alt="">
                     info@anabas.co.jp</p>
             </div>
