--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -20,6 +20,12 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
+    <!--WHATSAPP-->
+    <section>
+        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
+        </a>
+    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -56,51 +62,85 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid" src="../img/BannerSoporte.png" width="100%" height="100px" alt="Foto de Tima Miroshnichenko: https://www.pexels.com/es-es/foto/doctor-tratamiento-dentista-cuidado-de-la-salud-5355843/">
-                        <p class="texto__banner">Soporte tecnico especializado</p>
+                        <img class="img-fluid" src="../img/Banner soporte.png" width="100%" height="100px" alt="Foto de Tima Miroshnichenko: https://www.pexels.com/es-es/foto/doctor-tratamiento-dentista-cuidado-de-la-salud-5355843/">
+                        <p class="texto__banner">Soporte técnico especializado</p>
                     </div> 
                     </div>
                 </div>
             </section>
         </div>
     </header>
-    <!--IMAGENES HUMANO-->
+    <!--NUESTROS SERVICIOS SOPORTE-->
     <section>
         <div class="row">
-            <div class="col-lg 6">
-                <img src="../img/soportefoto.jpg" width="700vw" alt="">
+            <div class="col-lg 6 icono_h">
+                <img src="../img/imgHerramientas.png" width=300px height=300px alt="">
             </div>
             <div class="texto__vet col-lg  d-flex justify-content-center">
                 <div class="sub__texto col-lg ">
-                    <h3>Servicio tecnico de alta calidad</h3>
-                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
+                    <h3 class="titulos">Nuestros Servicios</h3>
+                    <ul class="servicios">
+                        <li>Instalación de equipos médicos.</li>
+                        <li>Mantenimiento preventivo, correctivo y predictivo.</li>
+                        <li>Contratos de servicio técnico</li>
+                        <li>Planificación de proyectos.</li>
+                        <li>Inspecciones de áreas</li>
+                        <li>Diseño de planos de área</li>
+                        <li>Gestion técnica documental</li>
+                    </ul>
+                    <p class="texto_serv">Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades.</p> 
+                    <div class="boton__cotiza"><a href="/pages/contacto.html"><button class="boton__general">Solicita tu cotización</button></a>
+                    </div>
                 </div>
+            </div>
+        </div>
+</section>
+    <section>
+        <div class="row">
+            <div class="col-lg 6 icono_2">
+                    <ul class="serv__equipos">
+                        <h3 class="titulos">Equipos</h3>
+                        <H5>Equipos de imágenes diagnósticas:</H5>
+                        <li>Tomógrafos, Resonadores, Arcos en C, Ecógrafos, Rayos X, entre otros.</li>
+                        <h5>Simuladores clínicos:</h5>
+                        <li>Simuladores de paciente neonatal, simuladores de embarazo, entre otros.</li>
+                        <h5>Laboratorio clínico:</h5>
+                        <li>Analizadores hematológicos, centrifugas, equipamento en general.</li>
+                        <h5>Equipos de quirófano:</h5>
+                        <li>Mesas quirúrgicas, incubadoras, maquinas de anestesia, lámparas cieliticas, monitores de signos vitales.</li>
+                        <h5>Equipos odontológicos:</h5>
+                        <li>Sillas odontológicas GNATUS, KROMADENT, FONADENTAL, DNAMIK, Autoclaves, aspirador de secreciones, accesorios.</li>
+                    </ul>
+            </div>
+            <div class="col-lg 6 icono_h">
+                <img src="../img/CorazonSginos.png" width=300px height=300px alt="">
             </div>
         </div>
     </section>
 <footer>
-    <a name="contacto__link" id="contacto__link"></a>
-    <section class="footer_info">
-        <div class="row">
-            <div class="col-lg iconos"> 
-                <p>Síguenos:</p>
-                <img src="../img/facebook.png" alt="">
-                <img src="../img/youtube.png" alt="">
-                <img src="../img/instagram.png" alt="">
-                <img src="../img/linkedin.png" alt="">
+        <a name="contacto__link" id="contacto__link"></a>
+        <section class="footer_info">
+            <div class="row">
+                <div class="col-lg iconos"> 
+                    <p>Síguenos:</p>
+                    <img src="../img/facebook.png" alt="">
+                    <img src="../img/youtube.png" alt="">
+                    <img src="../img/instagram.png" alt="">
+                    <img src="../img/linkedin.png" alt="">
+                </div>
+                <div class="col-lg iconos_uno"> 
+                    <p>Datos de contacto:</p>
+                    <p><img src="../img/llamada-telefonica.png" alt="">
+                    +57 601-7559348</p>
+                    <p><img src="../img/ubicacion.png" alt="">
+                        Cra. 15 No. 93A-62 OF: 304-305 | Bogotá Colombia</p>
+                    <p><img src="../img/email.png" alt="">
+                        info@anabas.co.jp</p>
+                </div>
+                <div class="col-lg footer__logo"> 
+                    <img src="../img/logotaichi.png" width=300px alt="">
+                </div>
             </div>
-            <div class="col-lg iconos_uno"> 
-                <p><img src="../img/llamada-telefonica.png" alt="">
-                +57 601-7559348</p>
-                <p><img src="../img/ubicacion.png" alt="">
-                    Cra. 15 No. 93A-62 OF: 304-305</p>
-                <p><img src="../img/email.png" alt="">
-                    info@anabas.co.jp</p>
-            </div>
-            <div class="col-lg footer__logo"> 
-                <img src="../img/logotaichi.png" width=300px alt="">
-            </div>
-        </div>
-    </section>
+        </section>
 </footer>
 </body>
