--- a/pages/humano.html
+++ b/pages/humano.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taichi Holdings|Medicina Humana</title>
+    <title>Taichi Holdings| Medicina Humana</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -108,10 +108,11 @@
                 <img src="../img/linkedin.png" alt="">
             </div>
             <div class="col-lg iconos_uno"> 
+                <p>Datos de contacto:</p>
                 <p><img src="../img/llamada-telefonica.png" alt="">
                 +57 601-7559348</p>
                 <p><img src="../img/ubicacion.png" alt="">
-                    Cra. 15 No. 93A-62 OF: 304-305</p>
+                    Cra. 15 No. 93A-62 OF: 304-305 | Bogotá Colombia</p>
                 <p><img src="../img/email.png" alt="">
                     info@anabas.co.jp</p>
             </div>
