--- a/pages/img__vet.html
+++ b/pages/img__vet.html
@@ -378,7 +378,7 @@
                 <p><img src="../img/llamada-telefonica.png" alt="">
                 +57 601-7559348</p>
                 <p><img src="../img/ubicacion.png" alt="">
-                    Cra. 15 No. 93A-62 OF: 304-305</p>
+                    Cra. 15 No. 93A-62 OF: 304-305| Bogotá Colombia</p>
                 <p><img src="../img/email.png" alt="">
                     info@anabas.co.jp</p>
             </div>
