--- a/pages/veterinario.html
+++ b/pages/veterinario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taichi Holdings Colombia</title>
+    <title>Taichi Holdings | Veterinaria</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -73,20 +73,38 @@
         <div class="row">
             <div class="col-lg btn1">
                 <a href="./img__vet.html" style="text-decoration: none;">
-                <button class="boton dos"><span>Imagenes Diagnosticas</span></button>
+                <button class="boton dos"><span>Imágenes Diagnósticas</span></button>
                 </a>
             </div>
             <div class="col-lg">
-                <button class="boton dos"><span>Endoscopia</span></button>
+                <a href="./hosp_vet.html" style="text-decoration: none;">
+                <button class="boton dos"><span>Hospitalario</span></button>
+                </a>
             </div>
             <div class="col-lg">
-                <button class="boton dos"><span>Laboratorio Clinico</span></button>
+                <a href="./lab_vet.html" style="text-decoration: none;">
+                <button class="boton dos"><span>Laboratorio Clínico</span></button>
+                </a>
             </div>
             <div class="col-lg">
-                <button class="boton dos"><span>Equipos Clinicos</span></button>
+                <a href="./odo_vet.html" style="text-decoration: none;">
+                <button class="boton dos"><span>Odontología</span></button>
+            </a>
             </div>
             <div class="col-lg"  >
-                <button class="boton dos"><span>Soporte técnico</span></button>
+            <a href="./ciru_vet.html" style="text-decoration: none;">
+                <button class="boton dos"><span>Cirugía</span></button>
+            </a>
+            </div>
+            <div class="col-lg"  >
+                <a href="./ciru_vet.html" style="text-decoration: none;">
+                <button class="boton dos"><span>Terapia</span></button>
+                </a>
+            </div>
+            <div class="col-lg"  >
+            <a href="./ciru_vet.html" style="text-decoration: none;">
+                <button class="boton dos"><span>Mobiliario</span></button>
+            </a>
             </div>
         </div>
     </Section>
@@ -94,7 +112,7 @@
     <section>
         <div class="row">
             <div class="col-lg 6">
-                <img src="../img/Master_Busines_Medicina_Veterinaria-2.jpeg" alt="">
+                <img src="../img/Taro.png" width="300px" heigh="300px" alt="">
             </div>
             <div class="texto__vet col-lg  d-flex justify-content-center">
                 <div class="sub__texto col-lg ">
@@ -120,7 +138,7 @@
                 <p><img src="../img/llamada-telefonica.png" alt="">
                 +57 601-7559348</p>
                 <p><img src="../img/ubicacion.png" alt="">
-                    Cra. 15 No. 93A-62 OF: 304-305 Bogota - Colombia</p>
+                    Cra. 15 No. 93A-62 OF: 304-305 | Bogota - Colombia</p>
                 <p><img src="../img/email.png" alt="">
                     info@anabas.co.jp</p>
             </div>
