--- a/pages/hosp_vet.html
+++ b/pages/hosp_vet.html
@@ -500,28 +500,69 @@
                         </div>
                     </div>
                 </section>
-<footer>
-    <a name="contacto__link" id="contacto__link"></a>
+  <!--FOOTER-->
+  <footer>
     <section class="footer_info">
-        <div class="row">
-            <div class="col-lg iconos"> 
-                <p>Síguenos:</p>
-                <img src="../img/facebook.png" alt="">
-                <img src="../img/youtube.png" alt="">
-                <img src="../img/instagram.png" alt="">
-                <img src="../img/linkedin.png" alt="">
-            </div>
-            <div class="col-lg iconos_uno"> 
-                <p>Datos de contacto:</p>
-                <p><img src="../img/llamada-telefonica.png" alt="">
-                +57 601-7559348</p>
-                <p><img src="../img/ubicacion.png" alt="">
-                    Cra. 15 No. 93A-62 OF: 304-305| Bogotá Colombia</p>
-                <p><img src="../img/email.png" alt="">
-                    info@anabas.co.jp</p>
-            </div>
-            <div class="col-lg footer__logo"> 
-                <img src="../img/logotaichi.png" width=300px alt="">
+        <div class="container-fluid">
+            <div class="row p-5 pb-2">
+                <div class="col-xs-12 cold-md-6 col-lg-3 pt-5 pl-5">
+                    <img src="../img/logotaichi.png" width="250px"alt="">
+                </div>
+                <div class="col-xs-12 cold-md-6 col-lg-3">
+                    <p class="h5 mb-3">Datos de contacto:</p>
+                    <div class="mb-2">
+                    <a class="text-decoration-none text-white"href="https://goo.gl/maps/Ye3UzQugDSJiWjK76">Direccion: Cra. 15 No. 93A-62 OF: 304-305 | Bogota - Colombia </a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="#">Telefono: +57 601-7559348</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabs.co.jp</a>
+                    </div>
+                </div>
+                <div class="col-xs-12 cold-md-6 col-lg-3">
+                    <p class="h5 mb-3">Links:</p>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="../pages/humano.html">Medicina Humana</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="../pages/veterinario.html">Medicina Veterinaria</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="../pages/odontologia.html">Odontología</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="../pages/simulacion.html">Simulación</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="../pages/soporte.html">Soporte técnico</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-decoration-none text-white"href="#">Terms & conditions</a>
+                    </div>
+                </div>
+                <div class="col-xs-12 cold-md-6 col-lg-3">
+                    <p class="h5 mb-3">Redes sociales:</p>
+                    <div class="mb-2">
+                        <img src="../img/instagram.png" width="20px"alt="">
+                        <a class="text-decoration-none text-white"href="https://www.instagram.com/taichi.colombia/">Instagram</a>
+                    </div>
+                    <div class="mb-2">
+                        <img src="../img/facebook.png" width="20px"alt="">
+                        <a class="text-decoration-none text-white"href="https://www.facebook.com/taichiholdingscolombia/">Facebook</a>
+                    </div>
+                    <div class="mb-2">
+                        <img src="../img/youtube.png" width="20px"alt="">
+                        <a class="text-decoration-none text-white"href="https://www.youtube.com/@taichiholdingscolombia9361">Youtube</a>
+                    </div>
+                    <div class="mb-2">
+                        <img src="../img/linkedin.png" width="20px"alt="">
+                        <a class="text-decoration-none text-white"href="https://co.linkedin.com/company/taichi-holdings-sas-colombia">Linkedin</a>
+                    </div>
+                </div>
+                <div class="col-xs-12 pt-4">
+                    <p class="text-center">Copyright - All rights reserved © | 2022</p>
+                </div>
             </div>
         </div>
     </section>
