Todo con nuevo footer

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <img class="img-fluid"id=mapa src="./img/Mapa.png" width="100%" alt="BannerMapa">
             </div>
         </div>
+    </section>
     <!--TEXTO Y CONTADOR-->
     <h2 class="titulos">Taichi en el mundo</h2>
     <section class="red__mundo">
@@ -271,20 +272,25 @@
         </div>
     </section>
         <!--TEXTO DESLIZANTE TAICHI-->
+    <section>
+        <div class="container"></div>
         <div class="row">
-            <div class="col-lg">
-                <div class="texto__deslizante container-fluid">
+                <div class="col-lg frase">
                     <p>
                         Taichi holdings sigue
                     </p>
+                </div>
+                <div class="texto__deslizante col-lg-4">
                     <ul class="palabras">
                     <li>Innovando</li>
                     <li>Creciendo</li>
-                    <li>Impactando  </li>
+                    <li>Impactando </li>
                     </ul>
+                </div>
+                <div class="col-lg frase">
                     <p>al rededor del mundo</p>
                 </div>
-            </div>
+        </div>
         </div>
     </section>
     <!--FOOTER-->
