--- a/pages/lab_vet.html
+++ b/pages/lab_vet.html
@@ -296,15 +296,15 @@
                 </div>
             </div>
         </section>
-  <!--FOOTER-->
-  <footer>
+<!--FOOTER-->
+<footer>
     <section class="footer_info">
         <div class="container-fluid">
-            <div class="row p-5 pb-2">
-                <div class="col-xs-12 cold-md-6 col-lg-3 pt-5 pl-5">
+            <div class="row p-5 pb-2 ">
+                <div class="col-xs-12 cold-md-6 col-lg-3 pt-5 pl-5 caja__datos">
                     <img src="../img/logotaichi.png" width="250px"alt="">
                 </div>
-                <div class="col-xs-12 cold-md-6 col-lg-3">
+                <div class="col-xs-12 cold-md-6 col-lg-3 caja__datos">
                     <p class="h5 mb-3">Datos de contacto:</p>
                     <div class="mb-2">
                     <a class="text-decoration-none text-white"href="https://goo.gl/maps/Ye3UzQugDSJiWjK76">Direccion: Cra. 15 No. 93A-62 OF: 304-305 | Bogota - Colombia </a>
@@ -316,7 +316,7 @@
                         <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabs.co.jp</a>
                     </div>
                 </div>
-                <div class="col-xs-12 cold-md-6 col-lg-3">
+                <div class="col-xs-12 cold-md-6 col-lg-3 caja__datos">
                     <p class="h5 mb-3">Links:</p>
                     <div class="mb-2">
                         <a class="text-decoration-none text-white"href="../pages/humano.html">Medicina Humana</a>
@@ -337,7 +337,7 @@
                         <a class="text-decoration-none text-white"href="#">Terms & conditions</a>
                     </div>
                 </div>
-                <div class="col-xs-12 cold-md-6 col-lg-3">
+                <div class="col-xs-12 cold-md-6 col-lg-3 caja__datos">
                     <p class="h5 mb-3">Redes sociales:</p>
                     <div class="mb-2">
                         <img src="../img/instagram.png" width="20px"alt="">
