Con cuerpo de cada linea de producto

--- a/pages/odontologia.html
+++ b/pages/odontologia.html
@@ -87,10 +87,10 @@
     <!--IMAGENES HUMANO-->
     <section>
         <div class="row">
-            <div class="col-lg 6">
-                <img src="../img/unidadOdon.jpg" width="700vw" alt="">
+            <div class="col-lg d-flex justify-content-center imagen__cuerpo pb-5 pt-5">
+                <img src="../img/unidadOdon.jpg" width="400px" heigh="400px" alt="">
             </div>
-            <div class="texto__vet col-lg  d-flex justify-content-center">
+            <div class="texto__cuerpo col-lg  d-flex justify-content-center pt-5">
                 <div class="sub__texto col-lg ">
                     <h3>Los mejores equipos medicos para odontologia</h3>
                     <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
