--- a/pages/veterinario.html
+++ b/pages/veterinario.html
@@ -111,11 +111,11 @@
     <!--IMAGENES VET-->
     <section>
         <div class="row">
-            <div class="col-lg 6">
-                <img src="../img/Taro.png" width="300px" heigh="300px" alt="">
+            <div class="col-lg d-flex justify-content-center imagen__cuerpo" >
+                <img src="../img/perro img.jpeg" width="400px" heigh="400px" alt="Foto de Lum3n: https://www.pexels.com/es-es/foto/foto-en-primer-plano-de-cara-de-perro-marron-y-negro-406014/">
             </div>
-            <div class="texto__vet col-lg  d-flex justify-content-center">
-                <div class="sub__texto col-lg ">
+            <div class="col-lg  d-flex justify-content-center">
+                <div class="col-lg texto__cuerpo">
                     <h3>Los mejores equipos para diagnóstico veterinario</h3>
                     <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Contamos con equipos médicos especializados para veterinaria en grandes y pequeños animales. Nuestros equipos cuentan con gran calidad y respaldo brindando soluciones no solo en su instalacion si no en la implementacion de proyectos de gran tamaño como lo son los centros de imagenes diagnósticas especializadas en medicina veterinaria.</p>  
                 </div>
