--- a/pages/simulacion.html
+++ b/pages/simulacion.html
@@ -87,11 +87,11 @@
     <!--IMAGENES HUMANO-->
     <section>
         <div class="row">
-            <div class="col-lg 6">
-                <img src="../img/simulacionfoto.png" width="700vw" alt="">
+            <div class="col-lg d-flex justify-content-center pb-5 pt-5 imagen__cuerpo">
+                <img src="../img/simulacionfoto.png"  width="400px" heigh="400px" alt="">
             </div>
-            <div class="texto__vet col-lg  d-flex justify-content-center">
-                <div class="sub__texto col-lg ">
+            <div class="texto__cuerpo col-lg  d-flex justify-content-center">
+                <div class="sub__texto col-lg pt-5">
                     <h3>Simulacion de pacientes </h3>
                     <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
                 </div>
