Con ajute en letras de desplazamiento y footer

--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
     </section>
         <!--TEXTO DESLIZANTE TAICHI-->
     <section>
-        <div class="container"></div>
+        <div class="container-fluid"></div>
         <div class="row">
                 <div class="col-lg frase">
                     <p>
                         Taichi holdings sigue
                     </p>
                 </div>
-                <div class="texto__deslizante col-lg-4">
+                <div class="texto__deslizante col-lg">
                     <ul class="palabras">
                     <li>Innovando</li>
                     <li>Creciendo</li>
@@ -310,7 +310,7 @@
                             <a class="text-decoration-none text-white"href="#">Telefono: +57 601-7559348</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabs.co.jp</a>
+                            <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabas.co.jp</a>
                         </div>
                     </div>
                     <div class="col-xs-12 cold-md-6 col-lg-3 caja__datos">
