--- a/pages/odo_vet.html
+++ b/pages/odo_vet.html
@@ -249,7 +249,7 @@
                         <a class="text-decoration-none text-white"href="#">Telefono: +57 601-7559348</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabs.co.jp</a>
+                        <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabas.co.jp</a>
                     </div>
                 </div>
                 <div class="col-xs-12 cold-md-6 col-lg-3 caja__datos">
