Ajustes para entrega incluyendo proyectos

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <div class="row">
                 <div class="col-lg frase">
                     <p>
-                        Taichi holdings sigue
+                        Taichi Holdings sigue
                     </p>
                 </div>
                 <div class="texto__deslizante col-lg">
@@ -288,7 +288,7 @@
                     </ul>
                 </div>
                 <div class="col-lg frase">
-                    <p>al rededor del mundo</p>
+                    <p>alrededor del mundo</p>
                 </div>
         </div>
         </div>
