--- a/pages/humano.html
+++ b/pages/humano.html
@@ -66,19 +66,28 @@
     <Section class="caja__botones">
         <div class="row">
             <div class="col-lg btn1">
-                <button class="boton uno"><span>Imagenes Diagnosticas</span></button>
+                <a href="./img__hum.html" style="text-decoration: none;">
+                <button class="boton uno"><span>Imagenes Diagnósticas</span></button>
+                </a>
             </div>
             <div class="col-lg">
                 <button class="boton uno"><span>Hospitalario</span></button>
             </div>
             <div class="col-lg">
-                <button class="boton uno"><span>Laboratorio Clinico</span></button>
+                <button class="boton uno"><span>Laboratorio Clínico</span></button>
             </div>
             <div class="col-lg">
-                <button class="boton uno"><span>Equipos Clinicos</span></button>
+                <button class="boton uno"><span>Dispositivos</span></button>
             </div>
-            <div class="col-lg"  >
+            <div class="col-lg">
+                <a href="./des__limp.html" style="text-decoration: none;">
+                <button class="boton uno"><span>Desinfección y limpieza</span></button>
+                </a>
+            </div>
+            <div class="col-lg">
+                <a href="./soporte.html" style="text-decoration: none;">
                 <button class="boton uno"><span>Soporte técnico</span></button>
+                </a>
             </div>
         </div>
     </Section>
@@ -91,7 +100,7 @@
             <div class="texto__cuerpo col-lg  d-flex justify-content-center pt-5">
                 <div class="sub__texto col-lg ">
                     <h3>Los mejores equipos medicos</h3>
-                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
+                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades.</p>  
                 </div>
             </div>
         </div>
@@ -110,7 +119,7 @@
                     <a class="text-decoration-none text-white"href="https://goo.gl/maps/Ye3UzQugDSJiWjK76">Direccion: Cra. 15 No. 93A-62 OF: 304-305 | Bogota - Colombia </a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-decoration-none text-white"href="#">Telefono: +57 601-7559348</a>
+                        <a class="text-decoration-none text-white"href="#">Telefono: +57 601-6272586</a>
                     </div>
                     <div class="mb-2">
                         <a class="text-decoration-none text-white"href="#">Email: taichi-colombia@anabas.co.jp</a>
