--- a/pages/des__limp.html
+++ b/pages/des__limp.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Equipos de imagenes diagnósticas para veterinaria">
-    <meta name="keywords" content="rayos x veterinario, tomografo veterinario, resonancia veterinaria, ecografo portatil, ecografo grandes animales, ecografo peque;os animales.">
-    <title>Taichi Holdings | Laboratorio Vet</title>
+    <meta name="description" content="Productos de limpieza y desinfeccion equipos medics">
+    <meta name="keywords" content="desinfeccion, limpieza equipos medicos, productos de limpieza equipos medicos">
+    <title>Taichi Holdings | Limpieza</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -62,44 +62,42 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid" src="../img/Banner Imagenes diags vet.png" width="100%" height="100px" alt="Banner">
-                        <p class="texto__banner">Equipos para laboratorio clínico veterinario</p>
+                        <img class="img-fluid" src="../img/bannerhumanos.png" width="100%" height="100px" alt="Banner">
+                        <p class="texto__banner">Productos de limpieza y desinfección</p>
                     </div> 
                     </div>
                 </div>
             </section>
         </div>
     </header>
-    <!--PRODUCTOS ECOGRAFIA VET-->
+    <!--PRODUCTOS LABORATORIO-->
     <section>
         <div class="row" id="product1">
             <a class="nav-link" href="#ecografia__vet"></a>
-            <h2 class="titulos">Equipos de laboratorio clínico</h2>
-            <p>Analizadores y pruebas rápidas</p>
+            <h2 class="titulos">Limpieza y desinfección para equipos médicos</h2>
+            <p>Productos especializados</p>
             <div class="pro-container col-lg">
                 <div class="pro" onclick="window.location.href='productos/1vet.html';">
-                    <img src="../img/VETproductos/mek-6550.jpeg" alt="">
+                    <img src="../img/limpiezaproducto/Bensaldina panos humedos.png" alt="">
                     <div class="des">
-                        <span>MEK-6550</span>
-                        <h5>NIHON KHODEN</h5>
+                        <span>BESALDINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>ANALIZADOR  HEMATOLOGICO  VETERINARIOS  DE 3  PARTES, 17 especies, Resultados precisos en tan solo 60 Segundo's  por muestra  con tan
-                            solo solo 10 μL de sangre total, Capilar o prediluido.  (60 muestras por hora)
-                            </h4>
+                        <h4>Paños húmedos - Es un desinfectante y limpiador especialmente diseñado en presentación de paños para equipo médico quirúrgico, odontológico, terapia respiratoria, objetos plásticos y termosensible, instrumental óptico y materiales de laboratorio clínico y de análisis. Al usarlo en paños puede usarse en áreas... </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/THINKA RT 4010.jpeg   " alt="">
+                    <img src="../img/limpiezaproducto/BACTIDINAH.jpeg" alt="">
                     <div class="des">
-                        <span>Thinka RT-4010 </span>
-                        <h5>ARKRAY</h5>
+                        <span>BACTIDINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -107,118 +105,107 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Analizador de orina
-                            Trabajo optimizado con menos pasos  Al realizar una inspección visual con  este instrumento, se ahorra el trabajo  manual de las pruebas.
-                            Los resultados impresos se pueden  pegar en el registro médico para  explicárselos al dueño de la mascota.
-                            </h4>
+                        <h4>BACTIDINA esta indicado para desinfectar el instrumental y demas implementos medicos y quirurgicos que no deben ser inmersos en liquidos desinfectantes. </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/spotchem.png" alt="">
+                    <img src="../img/limpiezaproducto/ENZIDINA-ESPUMA-700-ML..jpg" alt="">
                     <div class="des">
-                        <span>SPOTCHEM EZ  SP-4430</span>
-                        <h5>ARKRAY</h5>
+                        <span>ENZIDINA ESPUMA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Analizador automatizado para  química clínica
-                            La muestras de sangre total
-                            pueden ser analizadas de  manera fácil y rápida con el  centrifuga incorporada
-                            para el pretratamiento medición  continua.
-                            Disponible hasta 9 parámetros  Solo se necesita un espacio del  tamaño de una hoja A4 para su  instalación.
-                            </h4>
+                        <h4>ENZIDINA ESPUMA es un detergente liquido reforzado de alto poder a base de un potente complejo enzimatico y un
+                            potente desinfectante con accion bactericida y fungicida</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/lactate-pro-2-funda-abierta.jpeg" alt="">
+                    <img src="../img/limpiezaproducto/detoxdina-500mL.jpeg" alt="">
                     <div class="des">
-                        <span>Láctate Pro2 LT-1730</span>
-                        <h5>ARKRAY</h5>
+                        <span>DETOXDINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El analizador de lactato en sangre  "Láctate Pro2" es del tamaño de la  palma de la mano y mide  rápidamente el lactato con solo una  pequeña muestra de sangre.
-                            Dado que alcanza el CV (coeficiente  de variación).
-                            </h4>
+                        <h4>Elimina el oxido y las manchas de instrumentos quirúrgicos de acero inoxidable en 15 minutos. Su uso rutinario mejorará la vida útil y la eficiencia de instrumentos de acero inoxidable.
+                            Está libre de cloro, fosfatos y ácidos abrasivos.</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/Thinka BS-7110–VET.png" alt="">
+                    <img src="../img/limpiezaproducto/QUAT-DINA-500-mL-1.jpeg" alt="">
                     <div class="des">
-                        <span>Thinka BS-7110–VET </span>
-                        <h5>ARKRAY</h5>
+                        <span>QUAT-DINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Sistema de medición  de la glucosa, El	glucómetro	dedicado para uso en animales que proporciona confiables de manera rápida con una  microcantidad de muestra.
-                            En el glucómetro se lleva a cabo la  corrección del efecto de la temperatura  ambiental sobre el resultado de  las  pruebas de manera automática. </h4>
+                        <h4>QUATDINA® es un desinfectante hospitalario y eliminador de olores con tecnología bioquímica enzimática. De libre enjuague.
+                            De uso directo, sin dilución, para la desinfección y limpieza de equipos médicos, dispositivos médicos y superficies de contacto de los equipos.</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/Pruebaantigenocanino.png" alt="">
+                    <img src="../img/limpiezaproducto/kleendina-500-ml.jpeg" alt="">
                     <div class="des">
-                        <span>Kit de prueba del antígeno </span>
-                        <h5>ARKRAY</h5>
+                        <span>KLEENDINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El kit de prueba de antígeno de Dirofilaria immitis canina, Realice  la prueba  de  detección  del
-                            antígeno de CHW (Canine Heartworm,  Dirofilaria immitis canina) de manera  sencilla y rápida en un solo paso.
-                            </h4>
+                        <h4>KLEENDINA está indicado como limpiador, desinfectante, desengrasante y desincrustante de autoclaves. Es ideal para remover grasa, material orgánico y desincrustar material adherido en las mangueras internas de la autoclave.</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/Kitfelinoantigeno.png" alt="">
+                    <img src="../img/limpiezaproducto/SANIDINA.png" alt="">
                     <div class="des">
-                        <span>Kit FIV/FeLV thinka </span>
-                        <h5>ARKRAY</h5>
+                        <span>SANIDINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Combinado para  la detección de antígenos del virus de  la leucemia felina y de anticuerpos del  virus de inmunodeficiencia felina
-                            Kit	dos	en	uno	para	detectar	dos  infecciones por virus felino fundamentales
-                            </h4>
+                        <h4>PARA EL LAVADO DE MANOS Y DESINFECCION
+                            Humedezca las manos con agua, y aplique un aproximado de 3ml de SANIDINA. Frote por un minuto teniendo especial cuidado en frotarlo uniformemente, lave las manos y luego seque.</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/VETproductos/Immunofluorescence Analyzer2.JPG" alt="">
+                    <img src="../img/limpiezaproducto/glutadina-500-mL.jpeg" alt="">
                     <div class="des">
-                        <span>Inmunofluorecencia</span>
-                        <h5>TOOTOO MEDITECH</h5>
+                        <span>GLUTADINA</span>
+                        <h5>Holandina</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Analizador -  por inmmunofluorecencia - TestPlus - Diagnostico cuantitativo veterinario portatil perros y gatos por inmunofluorecencia</h4>
+                        <h4>Desinfectante de alto nivel a base de Glutaraldehido al 2%, especialmente indicado para el instrumental quirúrgico y odontológico. Contiene anti-oxidantes para proteger el instrumental. Con agradable olor a menta.</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
@@ -226,76 +213,7 @@
             </div>
         </div>
     </section>
-        <!--PRODUCTOS MICROSCOPIOS VET-->
-        <section>
-            <div class="row" id="product1">
-                <a class="endos" href="#"></a>
-                <h2 class="titulos">Microscopios</h2>
-                <p>Soluciones para laboratorio veterinario</p>
-                <div class="pro-container col-lg">
-                    <div class="pro">
-                        <img src="../img/VETproductos/TT-2016LCD.png" alt="">
-                        <div class="des">
-                            <span>TT-2016LCD</span>
-                            <h5>TOOTOO MEDITECH</h5>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <h4>Dimensión del dispositivo: 1/3”; Resolución horizontal: 700TVline; Píxeles: 976(H)X582(V)
-                                Datos técnicos de la pantalla LCD: Dimensión de la pantalla: 800X600; Color: 16,777,216 colores; Modo más alto: 1024X768@75Hz;
-                                Sistema de color: PAL/NTSC4.43/NTSC3.58/SECAM
-                                </h4>
-                            <a href="#">Más info...</a>
-                        </div>
-                        <a href="#"><i class="fal fa-shopping-cart"></i></a>
-                    </div>
-                    <div class="pro">
-                        <img src="../img/VETproductos/TT-2016T.jpg" alt="">
-                        <div class="des">
-                            <span>TT-2016T</span>
-                            <h5>TOOTOO MEDITECH</h5>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <h4>Microscopio Trinocular | Objetivo acromático plano DIN de 45 mm: 4X, 10X, 40X (S), 100X (S, aceite)
-                                Ocular de alcance plano de campo amplio: WF10X
-                                Aumento total: 40X-1000X
-                                Cabezal trinocular libre articulado, distancia interpupilar: 55-75 mm; 30º inclinado, 360º giratorio
-                                </h4>
-                            <a href="#">Más info...</a>
-                        </div>
-                        <a href="#"><i class="fal fa-shopping-cart"></i></a>
-                    </div>
-                    <div class="pro">
-                        <img src="../img/VETproductos/TT-2016T.jpg" alt="">
-                        <div class="des">
-                            <span>TT-2016B</span>
-                            <h5>TOOTOO MEDITECH</h5>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <h4>Microscopio Binocular | Objetivo acromático plano DIN de 45 mm: 4X, 10X, 40X (S), 100X (S, aceite)
-                                Ocular de alcance plano de campo amplio: WF10X
-                                Aumento total: 40X-1000X
-                                Cabeza binocular libre articulada, distancia interpupilar: 55-75 mm; 30º inclinado, 360º giratorio
-                                </h4>
-                            <a href="#">Más info...</a>
-                        </div>
-                        <a href="#"><i class="fal fa-shopping-cart"></i></a>
-                    </div>
-                </div>
-            </div>
-        </section>
+
 <!--FOOTER-->
 <footer>
     <section class="footer_info">
