Ajustes para entrega final v1

--- a/pages/humano.html
+++ b/pages/humano.html
@@ -67,17 +67,23 @@
         <div class="row">
             <div class="col-lg btn1">
                 <a href="./img__hum.html" style="text-decoration: none;">
-                <button class="boton uno"><span>Imagenes Diagnósticas</span></button>
+                <button class="boton uno"><span>Imágenes Diagnósticas</span></button>
                 </a>
             </div>
             <div class="col-lg">
+                <a href="./hosp__hum.html" style="text-decoration: none;">
                 <button class="boton uno"><span>Hospitalario</span></button>
+                </a>
             </div>
             <div class="col-lg">
+                <a href="./lab__hum.html" style="text-decoration: none;">
                 <button class="boton uno"><span>Laboratorio Clínico</span></button>
+                </a>
             </div>
             <div class="col-lg">
+                <a href="./disp__hum.html" style="text-decoration: none;">
                 <button class="boton uno"><span>Dispositivos</span></button>
+                </a>
             </div>
             <div class="col-lg">
                 <a href="./des__limp.html" style="text-decoration: none;">
@@ -100,7 +106,9 @@
             <div class="texto__cuerpo col-lg  d-flex justify-content-center pt-5">
                 <div class="sub__texto col-lg ">
                     <h3>Los mejores equipos medicos</h3>
-                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades.</p>  
+                    <p>Taichi Holdings SAS continua con su proposito de aportar de manera activa a la renovacion tecnologica de las diferentes areas medicas que posee el mercado Colombiano.
+                        En esta ocacion presentamos nuestro portafolio de linea medicina humana el cual ofrece productos ajustados a todas las necesidades del area humana y sus avances tecnologicos
+                        </p>  
                 </div>
             </div>
         </div>
