--- a/pages/odontologia.html
+++ b/pages/odontologia.html
@@ -68,19 +68,29 @@
     <Section class="caja__botones">
         <div class="row">
             <div class="col-lg btn1">
-                <button class="boton uno"><span>Imagenes Diagnosticas</span></button>
+                <a href="./odont__unidades.html" style="text-decoration: none;">
+                <button class="boton uno"><span>Unidades Odontologícas</span></button>
+                </a>
             </div>
             <div class="col-lg">
-                <button class="boton uno"><span>Instrumental</span></button>
+                <a href="./odont__autoclaves.html" style="text-decoration: none;">
+                <button class="boton uno"><span>Autoclaves</span></button>
+                </a>
             </div>
             <div class="col-lg">
-                <button class="boton uno"><span>Laboratorio Clinico</span></button>
+                <a href="./des__limp.html" style="text-decoration: none;">
+                <button class="boton uno"><span>Desinfección y limpieza</span></button>
+                </a>
             </div>
             <div class="col-lg">
-                <button class="boton uno"><span>Equipos Clinicos</span></button>
+                <a href="./odont__piezasm.html" style="text-decoration: none;">
+                <button class="boton uno"><span>Piezas de mano</span></button>
+                </a>
             </div>
             <div class="col-lg"  >
+                <a href="./soporte.html" style="text-decoration: none;">
                 <button class="boton uno"><span>Soporte técnico</span></button>
+                </a>
             </div>
         </div>
     </Section>
