--- a/pages/sim_phantom.html
+++ b/pages/sim_phantom.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Equipos de laboratorio clinico">
-    <meta name="keywords" content="centrifugas, analizador de hematologia">
-    <title>Taichi Holdings | Hospitalario</title>
+    <title>Taichi Holdings | Phantoms</title>
+    <meta name="description" content="Equipos para simulación clinica, phantoms y modelos de cuerpo entero para aprendizaje">
+    <meta name="keywords" content="Phantoms, simuladores de paciente, unidades de aprendisaje, phantom de rayos x, phantom de ecografia">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -20,12 +20,6 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
-    <!--WHATSAPP-->
-    <section>
-        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
-            <img class="iconoWp" src="../img/whatsapp.png" alt="">
-        </a>
-    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -62,8 +56,8 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid" src="../img/bannerhumanos.png" width="100%" height="100px" alt="Banner">
-                        <p class="texto__banner">Equipos hospitalarios</p>
+                        <img class="img-fluid" src="../img/SimulacionBanner .png" width="100%" height="100px" alt="Foto de Tima Miroshnichenko: https://www.pexels.com/es-es/foto/doctor-tratamiento-dentista-cuidado-de-la-salud-5355843/">
+                        <p class="texto__banner">Phantoms para la simulación de paciente</p>
                     </div> 
                     </div>
                 </div>
@@ -74,31 +68,31 @@
     <section>
         <div class="row" id="product1">
             <a class="nav-link" href="#ecografia__vet"></a>
-            <h2 class="titulos">Equipos para dotacion hospitalaria</h2>
-            <p>Dotación especializada para hospitales</p>
+            <h2 class="titulos">US | RX | CT | MRI</h2>
+            <p>Phantoms especializados para Ultrasonido, RX y Tomografía</p>
             <div class="pro-container col-lg">
                 <div class="pro" onclick="window.location.href='productos/1vet.html';">
-                    <img src="../img/HUMproducto/Zoll-EVM-.jpeg" alt="">
+                    <img src="../img/HUMproducto/us-19.png" alt="">
                     <div class="des">
-                        <span>EMV+</span>
-                        <h5>ZOLL</h5>
+                        <span>EchoLUNG US-19 </span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El diseño resistente del ventilador EMV+ lo hace ideal para el  uso en vehículos de emergencia y  durante el transporte aéreo de pacientes. Incluye una amplia gama  de modos de ventilación como  AC,  VIMS, CPAP     y  BL  (BIPAP). Existen versiones de los ventiladores  EMV+ y Eagle II compatibles con  entornos de IRM.
+                        <h4>Debido a la afluencia de pacientes de la pandemia COVID-19, las máquinas de TC y rayos X son cada vez más difíciles de acceder con fines de diagnóstico. Como tal, la ecografía pulmonar es una solución para minimizar la exposición de los profesionales médicos.
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/EAGLE2.png" alt="">
+                    <img src="../img/HUMproducto/Echozy US-1 .jpg" alt="">
                     <div class="des">
-                        <span>EAGLE II</span>
-                        <h5>ZOLL</h5>
+                        <span>Echozy SU-1</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -113,105 +107,108 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/Zoll-Z-vent.jpeg" alt="">
+                    <img src="../img/HUMproducto/PH76 dental.jpeg" alt="">
                     <div class="des">
-                        <span>Z-VENT</span>
-                        <h5>ZOLL</h5>
+                        <span>PH76 Dental</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El respirador Z Vent® es fácil de usar, portátil, duradero y resistente. Diseñado para ser ligero y de bajo consumo, Z Vent es perfecto para todo tipo de traslados, ya sea en ambulancias terrestres, transporte de pacientes críticos o bien cuando se realizan traslados con cuidados clínicos y transporte aéreo.
+                        <h4>Phantom para Radiografia Dental - Sus opciones de boca abierta y cerrada permiten una variedad de aplicaciones para entrenamiento e investigación.
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/AUTOPULSE.png" alt="">
+                    <img src="../img/HUMproducto/PH75-B CT.png" alt="">
                     <div class="des">
-                        <span>Autopulse</span>
-                        <h5>ZOLL</h5>
+                        <span>PH75-B</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Tabla de compresiones toráxicas  mecánicas. Sólo para pacientes con peso superior a los 40 kg. Configurable en modo  30:2 o continuo. Capacidad de sincronización con Desfibrilador Serie  X para realizar descarga eléctrica  en fase de descompresión.
-                        </h4>
-                        <a href="#">Más info...</a>
-                    </div>
-                    <a href="#"><i class="fal fa-shopping-cart"></i></a>
-                </div>
-                <div class="pro">
-                    <img src="../img/HUMproducto/AED3   -  BLS .png" alt="">
-                    <div class="des">
-                        <span>AED3   -  BLS </span>
-                        <h5>ZOLL</h5>
-                        <div class="star">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <h4>Equipos diseñados para monitorear constantes  vitales de los pacientes como ECG – SpO2 – PANI –  EtCO2, entre otras, y con la capacidad de entregar  descargas eléctricas de alta efectividad en caso de  que sea requerido, en modo automático (Modo  DEA) o manual.
-                        </h4>
-                        <a href="#">Más info...</a>
-                    </div>
-                    <a href="#"><i class="fal fa-shopping-cart"></i></a>
-                </div>
-                <div class="pro">
-                    <img src="../img/HUMproducto/ZOLL  M2 .png" alt="">
-                    <div class="des">
-                        <span>M2</span>
-                        <h5>ZOLL</h5>
-                        <div class="star">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <h4>Un invento revolucionario con todo lo que puedas imaginar te hace más profesional.
-                            Principales tendencias tecnológicas
+                        <h4>Phantom QA para CT Multiple - Fantoma para estudiar protocolos de análisis de imágenes ME-CT.
+                            Reducción de artefactos metálicos.
+                            Reducción de medios de contraste.
                             
-                            Calidad de imagen superior
-                            
-                            Variabilidad del usuario y del sistema durante la adquisición de la imagen, especialmente con pacientes obesos.</h4>
+                        </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/R SERIES.png" alt="">
+                    <img src="../img/HUMproducto/PH32-B.png" alt="">
                     <div class="des">
-                        <span>R SERIES</span>
-                        <h5>ZOLL</h5>
+                        <span>PH32-B </span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Monitor desfibrilador con capa-  cidad de monitoreo ECG 3 y 5  derivadas, SPO2 MASIMO, PANI,  EtCO2, dependiendo de la configuración solicitada. Incluye las  funciones de marcapasos, desfibrilación y cardioversión</h4>
+                        <h4>Phantom QA para Resonancia Magnetica - Este fantoma QA para resonancia magnética permite evaluar el grosor del corte, la resolución espacial, la uniformidad y la distorsión geométrica, así como el contraste.
+                        </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/X SERIES .png" alt="">
+                    <img src="../img/HUMproducto/Breastphantom.jpeg" alt="">
                     <div class="des">
-                        <span>X SERIES</span>
-                        <h5>ZOLL</h5>
+                        <span>US-9 Biopsia de mama</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Monitor desfibrilador con capacidad de monitoreo ECG 3 y 5 derivadas, SPO2 MASIMO Rainbow,  PANI, PAI, Tº, EtCO2, dependiendo  de la configuración solicitada. In  cluye las funciones de marcapasos, desfibrilación y cardioversión.  
+                        <h4>La biopsia por aspiración con aguja fina (FNAB), la biopsia con aguja central (CNB) y la biopsia Mammotome se pueden realizar bajo guía ecográfica
+                            2. Tejidos mamarios realistas que simulan la suavidad y resistencia de la glándula mamaria.
+                            3. Los objetivos están coloreados para confirmar el muestreo exitoso</h4>
+                        <a href="#">Más info...</a>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="../img/HUMproducto/CTcuerpocokmpleto.jpg" alt="">
+                    <div class="des">
+                        <span>PBU-60</span>
+                        <h5>KYOTO KAGAKU</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Phantom de cuerpo entero CT
+                            Absorción radiológica y número de HU aproximados al cuerpo humano
+                            Las articulaciones principales tienen una articulación cercana a la humana, lo que permite varios posicionamientos para el entrenamiento.
+                            el phantom se puede desmontar en 10 partes individuales</h4>
+                        <a href="#">Más info...</a>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="../img/HUMproducto/simuladorsguiadoUS.png" alt="">
+                    <div class="des">
+                        <span>MW18 </span>
+                        <h5>KYOTO KAGAKU</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Simulador de PICC guiado por Ultrasonido - Material nuevo e innovador similar al humano para una visualización perfecta / Un diseño sencillo con un sitio de punción reemplazable y características anatómicamente precisas 
                             </h4>
                         <a href="#">Más info...</a>
                     </div>
