--- a/pages/sim_paciente.html
+++ b/pages/sim_paciente.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Equipos de laboratorio clinico">
-    <meta name="keywords" content="centrifugas, analizador de hematologia">
-    <title>Taichi Holdings | Hospitalario</title>
+    <title>Taichi Holdings | Simulación paciente</title>
+    <meta name="description" content="Equipos para simulación clinica, phantoms y modelos de cuerpo entero para aprendizaje">
+    <meta name="keywords" content="Phantoms, simuladores de paciente, unidades de aprendisaje, phantom de rayos x, phantom de ecografia">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -20,12 +20,6 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
-    <!--WHATSAPP-->
-    <section>
-        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
-            <img class="iconoWp" src="../img/whatsapp.png" alt="">
-        </a>
-    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -62,8 +56,8 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid" src="../img/bannerhumanos.png" width="100%" height="100px" alt="Banner">
-                        <p class="texto__banner">Equipos hospitalarios</p>
+                        <img class="img-fluid" src="../img/SimulacionBanner .png" width="100%" height="100px" alt="Foto de Tima Miroshnichenko: https://www.pexels.com/es-es/foto/doctor-tratamiento-dentista-cuidado-de-la-salud-5355843/">
+                        <p class="texto__banner">Equipos para la simulación de paciente</p>
                     </div> 
                     </div>
                 </div>
@@ -74,31 +68,31 @@
     <section>
         <div class="row" id="product1">
             <a class="nav-link" href="#ecografia__vet"></a>
-            <h2 class="titulos">Equipos para dotacion hospitalaria</h2>
-            <p>Dotación especializada para hospitales</p>
+            <h2 class="titulos">Simuladores paciente</h2>
+            <p>Equipos dedicados a entrenamiento simulación de paciente</p>
             <div class="pro-container col-lg">
                 <div class="pro" onclick="window.location.href='productos/1vet.html';">
-                    <img src="../img/HUMproducto/Zoll-EVM-.jpeg" alt="">
+                    <img src="../img/HUMproducto/Simgastrocolono.png" alt="">
                     <div class="des">
-                        <span>EMV+</span>
-                        <h5>ZOLL</h5>
+                        <span>M40</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El diseño resistente del ventilador EMV+ lo hace ideal para el  uso en vehículos de emergencia y  durante el transporte aéreo de pacientes. Incluye una amplia gama  de modos de ventilación como  AC,  VIMS, CPAP     y  BL  (BIPAP). Existen versiones de los ventiladores  EMV+ y Eagle II compatibles con  entornos de IRM.
+                        <h4>Colonoscopia y Esofagogastroduodenoscopia - Ofrece una variedad de niveles de dificultad. Desde casos simples y sin complicaciones hasta casos complejos2. El tubo de colon puede hacerse hermético, lo que permite la insuflación y succión de aire3. La abertura del esfínter anal se puede manipular con una bomba manual de bola
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/EAGLE2.png" alt="">
+                    <img src="../img/HUMproducto/LM-101HV .png" alt="">
                     <div class="des">
-                        <span>EAGLE II</span>
-                        <h5>ZOLL</h5>
+                        <span>LM-101HV</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -106,112 +100,111 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El ventilador Eagle II adapta el  diseño del EMV+ para poder utilizarse en unidades de cuidado  intensivos, en departamentos de  emergencia y durante el traslado intrahospitalario. Su diseño  también permite el montaje en  paredes o brazos de extensión  específicos, soportes con ruedas y  camillas. Compatibles con entornos de IRM.
+                        <h4>Simulador de embarazo - Al intercambiar varias partes,se pueden practicar procedimientos como el examen externo de una mujer embarazada, el examen interno durante las etapas del parto, la asistencia obstétrica práctica, la sutura perineal de laceraciones blandas del canal del parto, etc.
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/Zoll-Z-vent.jpeg" alt="">
+                    <img src="../img/HUMproducto/LM101J.png" alt="">
                     <div class="des">
-                        <span>Z-VENT</span>
-                        <h5>ZOLL</h5>
+                        <span>LM-101J</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>El respirador Z Vent® es fácil de usar, portátil, duradero y resistente. Diseñado para ser ligero y de bajo consumo, Z Vent es perfecto para todo tipo de traslados, ya sea en ambulancias terrestres, transporte de pacientes críticos o bien cuando se realizan traslados con cuidados clínicos y transporte aéreo.
+                        <h4>Simulador de Parto - Se puede practicar una serie de técnicas de partería como el diagnóstico del inicio del trabajo de parto, la asistencia obstétrica y la sutura perineal intercambiando varias partes.
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/AUTOPULSE.png" alt="">
+                    <img src="../img/HUMproducto/LM-027 LM-028 .png" alt="">
                     <div class="des">
-                        <span>Autopulse</span>
-                        <h5>ZOLL</h5>
+                        <span>LM-027|LM-028</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Tabla de compresiones toráxicas  mecánicas. Sólo para pacientes con peso superior a los 40 kg. Configurable en modo  30:2 o continuo. Capacidad de sincronización con Desfibrilador Serie  X para realizar descarga eléctrica  en fase de descompresión.
+                        <h4>Simulador para inyección - El modelo está diseñado para simular la sensación real de la estructura esquelética humana requerida para determinar los sitios de inyección correctos.
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/AED3   -  BLS .png" alt="">
+                    <img src="../img/HUMproducto/mw25.jpeg" alt="">
                     <div class="des">
-                        <span>AED3   -  BLS </span>
-                        <h5>ZOLL</h5>
+                        <span>MW25</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Equipos diseñados para monitorear constantes  vitales de los pacientes como ECG – SpO2 – PANI –  EtCO2, entre otras, y con la capacidad de entregar  descargas eléctricas de alta efectividad en caso de  que sea requerido, en modo automático (Modo  DEA) o manual.
+                        <h4>Simulador para Atencion al Paciente - Mas de 40 Habilidades de capacitacion en atencion al paciente.
                         </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/ZOLL  M2 .png" alt="">
+                    <img src="../img/HUMproducto/cardiosim.jpeg" alt="">
                     <div class="des">
-                        <span>M2</span>
-                        <h5>ZOLL</h5>
+                        <span>Simulador K</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Un invento revolucionario con todo lo que puedas imaginar te hace más profesional.
-                            Principales tendencias tecnológicas
-                            
-                            Calidad de imagen superior
-                            
-                            Variabilidad del usuario y del sistema durante la adquisición de la imagen, especialmente con pacientes obesos.</h4>
+                        <h4>El simulador "K" contiene 88 casos; 12 casos de sonidos cardíacos normales, 14 casos de simulaciones de enfermedades cardíacas, 10 casos de simulaciones de arritmia y 52 casos de simulaciones de arritmia de ECG</h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/R SERIES.png" alt="">
+                    <img src="../img/HUMproducto/mw45.jpeg" alt="">
                     <div class="des">
-                        <span>R SERIES</span>
-                        <h5>ZOLL</h5>
+                        <span>MW45</span>
+                        <h5>KYOTO KAGAKU</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Monitor desfibrilador con capa-  cidad de monitoreo ECG 3 y 5  derivadas, SPO2 MASIMO, PANI,  EtCO2, dependiendo de la configuración solicitada. Incluye las  funciones de marcapasos, desfibrilación y cardioversión</h4>
+                        <h4>Simulador de recolección de hisopos nasofaríngeos
+                            1. Cuando el hisopo alcance la posición correcta en la cavidad nasal, el hisopo se pigmentará en azul
+                            2. Se pueden practicar formas de usar el bajalenguas con hisopos.
+                            3. La forma de la cavidad nasal entre derecha e izquierda es diferente.
+                            </h4>
                         <a href="#">Más info...</a>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="../img/HUMproducto/X SERIES .png" alt="">
+                    <img src="../img/HUMproducto/WETLAB.jpeg" alt="">
                     <div class="des">
-                        <span>X SERIES</span>
-                        <h5>ZOLL</h5>
+                        <span>WETLAB</span>
+                        <h5>KITARO</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>Monitor desfibrilador con capacidad de monitoreo ECG 3 y 5 derivadas, SPO2 MASIMO Rainbow,  PANI, PAI, Tº, EtCO2, dependiendo  de la configuración solicitada. In  cluye las funciones de marcapasos, desfibrilación y cardioversión.  
+                        <h4>El kit Kitaro® DryLab & WetLab simula las diferentes etapas de la cirugía de cataratas y permite a los cirujanos en formación practicar la técnica repetidamente sin la complicación adicional de largos tiempos de preparación y costosas muestras de tejido vivo.
                             </h4>
                         <a href="#">Más info...</a>
                     </div>
