--- a/pages/simulacion.html
+++ b/pages/simulacion.html
@@ -57,7 +57,7 @@
                 <div class="row">
                     <div class="col-lg">
                         <img class="img-fluid" src="../img/SimulacionBanner .png" width="100%" height="100px" alt="Foto de Tima Miroshnichenko: https://www.pexels.com/es-es/foto/doctor-tratamiento-dentista-cuidado-de-la-salud-5355843/">
-                        <p class="texto__banner">Equipos para la simulacion de paciente</p>
+                        <p class="texto__banner">Equipos para la simulación de paciente</p>
                     </div> 
                     </div>
                 </div>
@@ -68,19 +68,19 @@
     <Section class="caja__botones">
         <div class="row">
             <div class="col-lg btn1">
-                <button class="boton cuatro"><span>Signos vitales</span></button>
+                <a href="./sim_phantom.html" style="text-decoration: none;">
+                <button class="boton cuatro"><span>Phantoms</span></button>
+                </a>
             </div>
             <div class="col-lg">
-                <button class="boton cuatro"><span>Sim Ultrasonido</span></button>
-            </div>
-            <div class="col-lg">
-                <button class="boton cuatro"><span>Sim Tomografia</span></button>
-            </div>
-            <div class="col-lg">
-                <button class="boton cuatro"><span>Simulacion Hospitalaria</span></button>
+                <a href="./sim_paciente.html" style="text-decoration: none;">
+                <button class="boton cuatro"><span>Simulación de paciente</span></button>
+                </a>
             </div>
             <div class="col-lg"  >
+                <a href="./soporte.html" style="text-decoration: none;">
                 <button class="boton cuatro"><span>Soporte técnico</span></button>
+                </a>
             </div>
         </div>
     </Section>
@@ -92,7 +92,7 @@
             </div>
             <div class="texto__cuerpo col-lg  d-flex justify-content-center">
                 <div class="sub__texto col-lg pt-5">
-                    <h3>Simulacion de pacientes </h3>
+                    <h3>Simulación de pacientes </h3>
                     <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
                 </div>
             </div>
