Pagina terminada para enrtega

--- a/pages/odont__unidades.html
+++ b/pages/odont__unidades.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contamos con los mejores equipos para odontologia asi como tambien instrumental y liquidos de desinfeccion">
     <meta name="keywords" content="unidad odontologica, instrumental odontologia, equipos medicos odontologia, repuestos, pieza de mano">
-    <title>Taichi Holdings | Unidades odo</title>
+    <title>Taichi Holdings | Unidades odontología</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -64,7 +64,7 @@
             </section>
         </div>
     </header>
-<!--PRODUCTOS Autoclaves-->
+<!--PRODUCTOS Unidades-->
 <section>
     <div class="row" id="product1">
         <a class="nav-link" href="#ecografia__vet"></a>
